--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,21 @@
 title: Filip Kaklin
 email: filip.kaklin@ed.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  The blog.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  kaklin
+linked_in: filip.kaklin
+github: {"is_user_page": true,
+         "is_project_page": false}
+
 
 # Build settings
 markdown: kramdown
+# theme: minima
 theme: jekyll-theme-minimal
+logo: /assets/img/logo.png
 plugins:
   - jekyll-feed
 
