--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Filip Kaklin
 email: filip.kaklin@ed.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
-  The blog.
+  PhD Student - CMOS Imaging
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
@@ -30,7 +30,7 @@ github: {"is_user_page": true,
 markdown: kramdown
 # theme: minima
 theme: jekyll-theme-minimal
-logo: /assets/img/logo.png
+logo: /assets/img/photo.jpg
 plugins:
   - jekyll-feed
 
