modify categories / urls / site sectioning

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ navigation:
   - title: Publications
     url: publications
   - title: Side Projects
-    url: sides
+    url: side
 
 # Build settings
 markdown: kramdown
