Update sidebar and description

--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Filip Kaklin
-email: filip.kaklin@ed.ac.uk
+email: filip.kaklin@st.com
 description: >- # this means to ignore newlines until "baseurl:"
-  PhD Student - CMOS Imaging
+  Pixel Chip Designer with STMicroelectronics - PhD 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
@@ -25,6 +25,8 @@ linked_in: filip.kaklin
 github: {"is_user_page": true,
          "is_project_page": false}
 navigation:
+  - title: All Posts
+    url: /
   - title: Publications
     url: publications
   - title: Side Projects
